--- a/dienthoai/index.html
+++ b/dienthoai/index.html
@@ -5,7 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id="ka" width="500" height="300" style="border: 1px solid"></canvas>
-<script src="rectangle.js"></script>
+<script src="phone.js"></script>
 </body>
 </html>
